Add interaction with GUI and connect game engine to GUI

--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -79,6 +79,8 @@
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GUIBoard.cs" />
+    <Compile Include="GUIPiece.cs" />
     <Compile Include="MainMenuPage.xaml.cs">
       <DependentUpon>MainMenuPage.xaml</DependentUpon>
     </Compile>
