Add selection and highlighting, move gui to separate namespace

--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -59,15 +59,15 @@
     <Compile Include="GameEngine\GameRules.cs" />
     <Compile Include="GameEngine\Piece.cs" />
     <Compile Include="GameEngine\Player.cs" />
-    <Page Include="GamePage.xaml">
+    <Page Include="GUI\GamePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainMenuPage.xaml">
+    <Page Include="GUI\MainMenuPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="GUI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -76,15 +76,16 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="GameEngine\Board.cs" />
-    <Compile Include="GamePage.xaml.cs">
+    <Compile Include="GUI\GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GUIBoard.cs" />
-    <Compile Include="GUIPiece.cs" />
-    <Compile Include="MainMenuPage.xaml.cs">
+    <Compile Include="GUI\GUIBoard.cs" />
+    <Compile Include="GUI\GUIPiece.cs" />
+    <Compile Include="GUI\GUITile.cs" />
+    <Compile Include="GUI\MainMenuPage.xaml.cs">
       <DependentUpon>MainMenuPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="GUI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -116,21 +117,21 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\chessBackground.jpeg" />
+    <Resource Include="GUI\Images\chessBackground.jpeg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\black_bishop.png" />
-    <Resource Include="Images\white_bishop.png" />
-    <Resource Include="Images\black_king.png" />
-    <Resource Include="Images\white_king.png" />
-    <Resource Include="Images\black_knight.png" />
-    <Resource Include="Images\white_knight.png" />
-    <Resource Include="Images\black_pawn.png" />
-    <Resource Include="Images\white_pawn.png" />
-    <Resource Include="Images\black_queen.png" />
-    <Resource Include="Images\white_queen.png" />
-    <Resource Include="Images\black_rook.png" />
-    <Resource Include="Images\white_rook.png" />
+    <Resource Include="GUI\Images\black_bishop.png" />
+    <Resource Include="GUI\Images\white_bishop.png" />
+    <Resource Include="GUI\Images\black_king.png" />
+    <Resource Include="GUI\Images\white_king.png" />
+    <Resource Include="GUI\Images\black_knight.png" />
+    <Resource Include="GUI\Images\white_knight.png" />
+    <Resource Include="GUI\Images\black_pawn.png" />
+    <Resource Include="GUI\Images\white_pawn.png" />
+    <Resource Include="GUI\Images\black_queen.png" />
+    <Resource Include="GUI\Images\white_queen.png" />
+    <Resource Include="GUI\Images\black_rook.png" />
+    <Resource Include="GUI\Images\white_rook.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
